--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class=" js no-touch">
 <head>
-  <title>Samsul ♥ Atin | Wedding Invitation</title>
+  <title>Samsul Arifin ♥ Afiatin Solikha | Wedding Invitation</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 			    <span class="icon-bar"></span>
 			    <span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="./">Samsul <i class="fa fa-heart"></i> Atin</a>
+			  <a class="navbar-brand" href="./">Samsul Arifin <i class="fa fa-heart"></i> Afiatin Solikha</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 			  <ul class="nav navbar-nav navbar-right" style="padding-top: 5px;">
@@ -55,8 +55,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="jumbotron col-md-8">
-				  <h1 class="small">Welcome To <br /><span class="bold">Wedding Invitation Website</span></h1>
-				  <h2 class="small"><span class="bold">Samsul &amp; Atin</span></h2>
+				  <h1 class="small">Welcome To <br /><span class="bold">Wedding Invitation</span></h1>
+				  <h2 class="small"><span class="bold">Samsul Arifin &amp; Afiatin Solikha</span></h2>
 				  <p class="big">Aku bersyukur kepada Allah yang mempertemukanku dengan pasangan hati. <br>Maka bukalah pintu rizki kami dan berkahilah kami dengannya.</p>
 				  <p class="big">
 				  	<div class="social">
@@ -94,11 +94,11 @@
 				</div>
 				<div class="page-title text-center">
 					<div class="nama">
-						<h2 class="small">Samsul Arifin Pratama</h2>
-						<p>Putra Bapak Abdul Ajis - Ibu Sari Ernawati<br>Gudang, Asembagus - Situbondo.</p>
+						<h2 class="small">Samsul Arifin Arifin Pratama</h2>
+						<p>Putra Bapak Supardi - Ibu Samroh<br>Karangasem - Karangdawa.</p>
 						<h1 class="tengah">Dengan</h1>
-						<h2 class="small">Atin</h2>
-						<p>Putri Bapak Badri - Ibu Zairahma<br>Kampung, Asembagus - Situbondo.</p>
+						<h2 class="small">Afiatin Solikha</h2>
+						<p>Putri Bapak Saheri - Ibu Asih<br>Karangasem - Karangdawa.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -106,7 +106,7 @@
 						<div class="service-icon"><i class="fa fa-diamond"></i></div>
 						<div class="service-text">
 							<h3>Akad Nikah</h3>
-							<p>Kamis, 13 Nopember 2021<br>Jam 09.00 WIB<br>Bertempat di Kantor Urusan Agama Kec. Asembagus</p>
+							<p>Jum'at, 13 Agustus 2021<br>Pukul 09.00 WIB<br>Di Rumah Mempelai Putri</p>
 						</div>
 					</div>
 				</div>
@@ -115,7 +115,7 @@
 						<div class="service-icon"><i class="fa fa-calendar"></i></div>
 						<div class="service-text">
 							<h3>Hari / Tanggal</h3>
-							<p>Kamis, 13 Nopember 2016 15.00-17.00 WIB (Riza)<br><br>Sabtu, 19 Nopember 2016 12.00-15.00 WIB (David)</p>
+							<p>Kamis, 13 Agustus 2021<br></p>
 						</div>
 					</div>
 				</div>
@@ -124,7 +124,7 @@
 						<div class="service-icon"><i class="fa fa-location-arrow"></i></div>
 						<div class="service-text">
 							<h3><a href="#lokasi">Lokasi</a></h3>
-							<p> Jalan Anggrek 2 Karangdawa (Samsul)<br><br>Jalan Anggrek 2 Karangdawa. (David)</p>
+							<p> Jalan Anggrek 2 Karangdawa (Samsul Arifin)<br></p>
 						</div>
 					</div>
 				</div>
@@ -267,7 +267,7 @@
 								<img src="http://i.imgur.com/SC80CR3.jpg" class="img-responsive">
 							</div>
 							<div class="fig-caption">
-								<h3>Samsul</h3>
+								<h3>Samsul Arifin</h3>
 								<p class="marb-20">IT Support </p>
 								<p>Follow me:</p>
 								<ul class="team-social">
@@ -285,7 +285,7 @@
 								<img src="http://i.imgur.com/7PHo5OW.jpg" class="img-responsive">
 							</div>
 							<div class="fig-caption">
-								<h3>Atin</h3>
+								<h3>Afiatin Solikha</h3>
 								<p class="marb-20">Guru SMK Jurusan Teknik Komputer dan Jaringan</p>
 								<p>Follow me:</p>
 								<ul class="team-social">
@@ -321,12 +321,12 @@
 					<hr class="pg-titl-bdr-btm"></hr>
 					<div class="autoplay">
 						<div class="col-md-6">
-							<h1>RUMAH ATIN</h1>
+							<h1>RUMAH Afiatin Solikha</h1>
 							<p>Jalan Anggrek 2 Karangdawa <br>Jawa Tengah.</p>
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2369.880081876353!2d114.2072689356276!3d-7.749914341566808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwNDQnNTkuNyJTIDExNMKwMTInMzAuMSJF!5e1!3m2!1sen!2sid!4v1474863576142" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
 						<div class="col-md-6">
-							<h1>RUMAH DAVID</h1>
+							<h1>RUMAH Afiatin Solikha</h1>
 							<p>Jalan Anggrek 2 Karangdawa <br>Jawa Tengah.</p>
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.0973115017146!2d114.22842775457106!3d-7.7464442122503465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwNDQnNDcuMiJTIDExNMKwMTMnNDYuNSJF!5e1!3m2!1sen!2sid!4v1474863697990" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
