--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<div class="row">
 				<div class="jumbotron col-md-8">
 				  <h1 class="small">Welcome To <br /><span class="bold">Wedding Invitation</span></h1>
-				  <h2 class="small"><span class="bold">Samsul Arifin &amp; Afiatin Solikha</span></h2>
+				  <h2 class="small"><span class="bold">Samsul &amp; Afiatin</span></h2>
 				  <p class="big">Aku bersyukur kepada Allah yang mempertemukanku dengan pasangan hati. <br>Maka bukalah pintu rizki kami dan berkahilah kami dengannya.</p>
 				  <p class="big">
 				  	<div class="social">
@@ -94,7 +94,7 @@
 				</div>
 				<div class="page-title text-center">
 					<div class="nama">
-						<h2 class="small">Samsul Arifin Arifin Pratama</h2>
+						<h2 class="small">Samsul Arifin</h2>
 						<p>Putra Bapak Supardi - Ibu Samroh<br>Karangasem - Karangdawa.</p>
 						<h1 class="tengah">Dengan</h1>
 						<h2 class="small">Afiatin Solikha</h2>
@@ -115,13 +115,13 @@
 						<div class="service-icon"><i class="fa fa-calendar"></i></div>
 						<div class="service-text">
 							<h3>Hari / Tanggal</h3>
-							<p>Kamis, 13 Agustus 2021<br></p>
+							<p>Sabtu, 14 Agustus 2021<br></p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4"> 
 					<div class="service-box">
-						<div class="service-icon"><i class="fa fa-location-arrow"></i></div>
+						<div class="service-icon"><i class="fa fa-location-arrow"></i></div><br>
 						<div class="service-text">
 							<h3><a href="#lokasi">Lokasi</a></h3>
 							<p> Jalan Anggrek 2 Karangdawa (Samsul Arifin)<br></p>
@@ -257,43 +257,45 @@
 			<div class="row">
 				<div class="page-title text-center">
 					<h1>Mempelai</h1>
-					<p>Lebih kenal kami di Media Sosial.</p>
+					<!-- <p>Lebih kenal kami di Media Sosial.</p> -->
 					<hr class="pg-titl-bdr-btm"></hr>
 				</div>
 				<div class="autoplay">
 					<div class="col-md-6">
-						<div class="team-info">
-							<div class="img-sec">
-								<img src="http://i.imgur.com/SC80CR3.jpg" class="img-responsive">
+						<!-- <div class="team-info" height="400px"> -->
+							<div class="img-sec" height="400px">
+								<img src="img/samsul-photo2.jpg" height="400px" class="img-responsive">
+								<span style="position: absolute;bottom:2px;left:20px;color:white;font-weight:bold;">Samsul Arifin</span>
 							</div>
-							<div class="fig-caption">
+							<!-- <div class="fig-caption">
 								<h3>Samsul Arifin</h3>
-								<p class="marb-20">IT Support </p>
-								<p>Follow me:</p>
+								<p class="marb-20">IT Support </p> -->
+								<!-- <p>Follow me:</p>
 								<ul class="team-social">
 									<li class="bgblue-dark"><a href="https://www.facebook.com/juli.ariyadi" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								    <li class="bgblue-light"><a href="https://twitter.com/djuliar" target="_blank"><i class="fa fa-twitter"></i></a></li>
 								    <li class="bgred"><a href="https://plus.google.com/105385187235951473616" target="_blank"><i class="fa fa-google-plus"></i></a></li>
 								    <li class="bgbrown"><a href="https://www.instagram.com/djuliar" target="_blank"><i class="fa fa-instagram"></i></a></li>
-								</ul>
-							</div>
-						</div>
+								</ul> 
+							</div> -->
+						<!-- </div> -->
 					</div>
 					<div class="col-md-6">
-						<div class="team-info">
-							<div class="img-sec">
-								<img src="http://i.imgur.com/7PHo5OW.jpg" class="img-responsive">
+						<!-- <div class="team-info" > -->
+							<div class="img-sec" height="400px">
+								<img src="img/atin-photo.jpg" height="400px" class="img-responsive">
+								<span style="position: absolute;bottom: 2px;left:20px;color:white;font-weight:bold;">Afiatin Solikha</span>
 							</div>
-							<div class="fig-caption">
+							<!-- <div class="fig-caption">
 								<h3>Afiatin Solikha</h3>
-								<p class="marb-20">Guru SMK Jurusan Teknik Komputer dan Jaringan</p>
-								<p>Follow me:</p>
+								 <p class="marb-20">Guru SMK Jurusan Teknik Komputer dan Jaringan</p> -->
+								<!-- <p>Follow me:</p>
 								<ul class="team-social">
 									<li class="bgblue-dark"><a href="https://www.facebook.com/riza.caca.31" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								    <li class="bgbrown"><a href="https://www.instagram.com/rizacaca" target="_blank"><i class="fa fa-instagram"></i></a></li>
 								</ul>
-							</div>
-						</div>
+							</div> -->
+						<!-- </div> -->
 					</div>
 				</div>
 			</div>
@@ -321,14 +323,14 @@
 					<hr class="pg-titl-bdr-btm"></hr>
 					<div class="autoplay">
 						<div class="col-md-6">
-							<h1>RUMAH Afiatin Solikha</h1>
+							<h1>Rumah Samsul Arifin</h1>
 							<p>Jalan Anggrek 2 Karangdawa <br>Jawa Tengah.</p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2369.880081876353!2d114.2072689356276!3d-7.749914341566808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwNDQnNTkuNyJTIDExNMKwMTInMzAuMSJF!5e1!3m2!1sen!2sid!4v1474863576142" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!4v1628009115461!6m8!1m7!1swzVyMh-_DIHSqfkmv7ViwA!2m2!1d-7.071967334838239!2d109.0378549780728!3f13.164974715050796!4f-12.54005244415265!5f0.7820865974627469" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
 						<div class="col-md-6">
-							<h1>RUMAH Afiatin Solikha</h1>
-							<p>Jalan Anggrek 2 Karangdawa <br>Jawa Tengah.</p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2485.0973115017146!2d114.22842775457106!3d-7.7464442122503465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwNDQnNDcuMiJTIDExNMKwMTMnNDYuNSJF!5e1!3m2!1sen!2sid!4v1474863697990" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
+							<h1>Rumah Afiatin Solikha</h1>
+							<p>Jalan Anggrek 3 Karangdawa <br>Jawa Tengah.</p>
+							<iframe src="https://www.google.com/maps/embed?pb=!4v1628009422863!6m8!1m7!1sJf__txQBeAuOeov7mNmgzw!2m2!1d-7.071611863232053!2d109.0390957499936!3f20.543211168707785!4f3.5493819889076406!5f0.7820865974627469" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
 					</div>	
 				</div>
@@ -362,9 +364,9 @@
 				<div class="form-sec">
 					<div class="col-md-4"></div>
                 	<div class="col-md-4 kontak">
-						<i class="fa fa-phone"></i> 085xxxxxx<br>
-						<i class="fa fa-whatsapp"></i> 085xxxxxxx<br>
-						<i class="fa fa-envelope-o"></i> <a href="mailto:djuliariyadi@gmail.com">email@gmail.com</a>
+						<i class="fa fa-phone"></i> 0838-3710-6370<br>
+						<i class="fa fa-whatsapp"></i> 0838-3710-6370<br>
+						<!-- <i class="fa fa-envelope-o"></i> <a href="mailto:djuliariyadi@gmail.com">email@gmail.com</a> -->
                     </div>
                     <div class="col-md-4"></div>
                 </div>
@@ -397,7 +399,7 @@
 		<div class="container">
 			<div style="visibility: visible; animation-name: zoomIn;" class="col-md-12 text-center wow zoomIn">
 				<div class="footer_copyright">
-					<p> Copyright © 2016 <a href="http://djuliar.blogspot.com">Djuliar Heart's</a>.</p>
+					<p> Copyright © 2021 <a target="_blank" href="http://rizalazky.github.io/my-portofolio">Aku Kecengklak</a>.</p>
 				</div>
 			</div>
 		</div>
