--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>Samsul Arifin ♥ Afiatin Solikha | Wedding Invitation</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=1024">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">  
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Monda|Orbitron|Yellowtail|Open+Sans|Cookie" rel="stylesheet"> 
