--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class=" js no-touch">
 <head>
-  <title>Samsul Arifin ♥ Afiatin Solikha | Wedding Invitation</title>
+  <title>Samsul Arifin ♥ Afiatin Sholiha | Wedding Invitation</title>
   <meta charset="utf-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="width=1024">
@@ -34,7 +34,7 @@
 			    <span class="icon-bar"></span>
 			    <span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="./">Samsul Arifin <i class="fa fa-heart"></i> Afiatin Solikha</a>
+			  <a class="navbar-brand" href="./">Samsul Arifin <i class="fa fa-heart"></i> Afiatin Sholiha</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 			  <ul class="nav navbar-nav navbar-right" style="padding-top: 5px;">
@@ -98,7 +98,7 @@
 						<h2 class="small">Samsul Arifin</h2>
 						<p>Putra Bapak Supardi - Ibu Samroh<br>Karangasem - Karangdawa.</p>
 						<h1 class="tengah">Dengan</h1>
-						<h2 class="small">Afiatin Solikha</h2>
+						<h2 class="small">Afiatin Sholiha</h2>
 						<p>Putri Bapak Saheri - Ibu Asih<br>Karangasem - Karangdawa.</p>
 					</div>
 				</div>
@@ -261,7 +261,7 @@
 					<!-- <p>Lebih kenal kami di Media Sosial.</p> -->
 					<hr class="pg-titl-bdr-btm"></hr>
 				</div>
-				<div class="autoplay">
+				<div class="autoplay" style="display: flex;justify-content: center;">
 					<div class="col-md-6">
 						<!-- <div class="team-info" height="400px"> -->
 							<div class="img-sec" height="400px">
@@ -285,10 +285,10 @@
 						<!-- <div class="team-info" > -->
 							<div class="img-sec" height="400px">
 								<img src="img/atin-photo.jpg" height="400px" class="img-responsive">
-								<span style="position: absolute;bottom: 2px;left:20px;color:white;font-weight:bold;">Afiatin Solikha</span>
+								<span style="position: absolute;bottom: 2px;left:20px;color:white;font-weight:bold;">Afiatin Sholiha</span>
 							</div>
 							<!-- <div class="fig-caption">
-								<h3>Afiatin Solikha</h3>
+								<h3>Afiatin Sholiha</h3>
 								 <p class="marb-20">Guru SMK Jurusan Teknik Komputer dan Jaringan</p> -->
 								<!-- <p>Follow me:</p>
 								<ul class="team-social">
@@ -329,7 +329,7 @@
 							<iframe src="https://www.google.com/maps/embed?pb=!4v1628009115461!6m8!1m7!1swzVyMh-_DIHSqfkmv7ViwA!2m2!1d-7.071967334838239!2d109.0378549780728!3f13.164974715050796!4f-12.54005244415265!5f0.7820865974627469" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
 						<div class="col-md-6">
-							<h1>Rumah Afiatin Solikha</h1>
+							<h1>Rumah Afiatin Sholiha</h1>
 							<p>Jalan Anggrek 3 Karangdawa <br>Jawa Tengah.</p>
 							<iframe src="https://www.google.com/maps/embed?pb=!4v1628009422863!6m8!1m7!1sJf__txQBeAuOeov7mNmgzw!2m2!1d-7.071611863232053!2d109.0390957499936!3f20.543211168707785!4f3.5493819889076406!5f0.7820865974627469" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
@@ -340,7 +340,7 @@
 	</div>
 	<!--LOCATION END-->
 	<!--COMMENT START-->
-	<div id="comment" class="section-padding">
+	<!-- <div id="comment" class="section-padding">
 		<div class="container">
 			<div class="row">
 				<div class="page-title text-center">
@@ -351,7 +351,7 @@
 				</div>
 			</div>
 		</div>
-	</div>	
+	</div>	 -->
 	<!--COMMENT END-->
 	<!--CONTACT START-->
 	<div id="kontak" class="section-padding">
