--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </audio>
 
 
-	<row class="main-navigation" id="navbar" >
+	<row class="main-navigation" id="navbar" style="display: none;">
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
 			<div class="navbar-header">
@@ -333,13 +333,13 @@
 						<div class="col-md-6 mr-2">
 							<h1>Rumah Samsul Arifin</h1>
 							<p>Jalan Anggrek 2 Karangdawa <br>Jawa Tengah.</p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.4634656440126!2d109.03588681477366!3d-7.072140494892346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMDQnMTkuNyJTIDEwOcKwMDInMTcuMSJF!5e0!3m2!1sen!2sid!4v1628088631408!5m2!1sen!2sid" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.4634656440126!2d109.03588681477366!3d-7.072140494892346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMDQnMTkuNyJTIDEwOcKwMDInMTcuMSJF!5e0!3m2!1sen!2sid!4v1628088631408!5m2!1sen!2sid" width="450" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 							<!-- <iframe src="https://www.google.com/maps/embed?pb=!4v1628009115461!6m8!1m7!1swzVyMh-_DIHSqfkmv7ViwA!2m2!1d-7.071967334838239!2d109.0378549780728!3f13.164974715050796!4f-12.54005244415265!5f0.7820865974627469" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe> -->
 						</div>
 						<div class="col-md-6">
 							<h1>Rumah Afiatin Sholiha</h1>
 							<p>Jalan Anggrek 3 Karangdawa <br>Jawa Tengah.</p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.4521622227153!2d109.03557141477374!3d-7.073458794891397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMDQnMjQuNSJTIDEwOcKwMDInMTUuOSJF!5e0!3m2!1sen!2sid!4v1628088926469!5m2!1sen!2sid" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.4521622227153!2d109.03557141477374!3d-7.073458794891397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMDQnMjQuNSJTIDEwOcKwMDInMTUuOSJF!5e0!3m2!1sen!2sid!4v1628088926469!5m2!1sen!2sid" width="450" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 							<!-- <iframe src="https://www.google.com/maps/embed?pb=!4v1628009422863!6m8!1m7!1sJf__txQBeAuOeov7mNmgzw!2m2!1d-7.071611863232053!2d109.0390957499936!3f20.543211168707785!4f3.5493819889076406!5f0.7820865974627469" width="500" height="375" frameborder="0" style="border:0" allowfullscreen></iframe> -->
 						</div>
 					</div>	
@@ -415,6 +415,21 @@
 		</div>
 	</div>
 
+	<div id="play" class="jumbotron" style="display: flex;justify-content: center;flex-direction:column;align-items: center;height: 100vh;background-color: black;opacity: 0.9;
+			z-index: 200;width: 100%;position: fixed;top: 0;
+			transition-property: all;
+			transition-duration: .8s;
+			transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+			">
+		<h2 class="small"><span class="bold">Samsul Arifin &amp; Afiatin Sholiha</span></h2>
+		<h2 class="small"><span class="bold">13 Agustus 2021</span></h2>
+		<a id="playMusic" class="btn btn-banner">Lihat Undangan<i class="fa fa-envelope-o"></i></a>
+		<!-- <h2 class="small"><span class="bold">Wedding</span></h2> -->
+		<!-- <br>
+		<br> -->
+		<!-- <button id="playMusic">View More</button> -->
+	</div>
+
 
 	<!-- <audio controls loop>
 		<source src="/audio/janji_suci.mp3">
@@ -436,13 +451,21 @@
 		// 	console.log("ON LOAD")
 		// 	document.getElementById('audio').play();
 		// })
+		const buttonPlay=document.getElementById('playMusic');
 
-		document.addEventListener('click', musicPlay);
-		document.addEventListener('scroll',musicPlay)
+		buttonPlay.addEventListener('click', musicPlay);
+		// document.addEventListener('scroll',musicPlay)
 		function musicPlay() {
 			document.getElementById('audio').play();
 			document.removeEventListener('click', musicPlay);
-			document.removeEventListener('scroll', musicPlay);
+
+			document.getElementById('play').style.height='0';
+			setTimeout(()=>{
+				document.getElementById('play').style.display='none';
+			},300)
+			document.getElementById('navbar').style.display='block';
+
+			// document.removeEventListener('scroll', musicPlay);
 		}
 
 		// audio.play();
